# Keryx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  KERYX_PROCESS.md  Keryx_Distributed_Video_Orchestration.pptx  Mon enregistrement 1.m4a  README.md  TEST_PLAN.md  clusterrole_patch.yaml  docker-compose-revoice.yaml  docker-compose.yaml  keryx.code-workspace  private.pem  public.pem  replace_last_frame.py  starops_intro_prompt.txt
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
deploy/: diffusion-engine-pvc.yaml  diffusion-engine.yaml  extractor.yaml  rbac-binding.yaml  texts-translation.yaml  video-composer.yaml  video-generator.yaml  voice-cloner.yaml  voice-extractor.yaml
scripts/: assemble_tts_video.py  clean_keyframes_ai.py  deduplicate.py  extract_unique.py  push-orchestrator.sh  revert_numpy.py  revoice_video.py  revoice_video_en_to_fr.py  revoice_xtts_dual.py  setup_cloner.py  setup_test_s3.py  test_e2e.py  test_video_push.py  (+1 more)
services/ingestor/: Cargo.toml  Dockerfile
services/ingestor/src/: lib.rs  main.rs  state.rs
services/ingestor/src/application/use_cases/: ingest_video.rs
services/ingestor/src/domain/entities/: job.rs
services/ingestor/src/domain/ports/: job_repository.rs  mod.rs  scaling_repository.rs  storage_repository.rs  stylizer_repository.rs  tts_repository.rs  video_repository.rs  voice_cloner_repository.rs
services/ingestor/src/infrastructure/: auth_middleware.rs  mod.rs
services/ingestor/src/infrastructure/repositories/: coqui_voice_cloner_repository.rs  diffusion_stylizer_repository.rs  ffmpeg_analyzer.rs  ffmpeg_reconstructor.rs  kube_scaling_repository.rs  mod.rs  ollama_translator_repository.rs  opencv_analyzer.rs  pptx_builder_repository.rs  qwen_tts_repository.rs  redis_job_repository.rs  s3_storage_repository.rs  slack_notification_repository.rs  whisper_stt_repository.rs  yt_dlp_repository.rs
services/ingestor/src/interfaces/http/: job_handlers.rs  log_handlers.rs  mod.rs
services/ingestor/static/: index.html
services/orchestrator/: Cargo.toml  Dockerfile  Dockerfile.fast  test_public_key.pem
services/orchestrator/src/: lib.rs  main.rs  state.rs  telemetry.rs
services/orchestrator/src/application/use_cases/: create_job.rs  ingest_video.rs  mod.rs  voices_lab.rs
services/orchestrator/src/domain/: job_tracking.rs  mod.rs
services/orchestrator/src/domain/entities/: job.rs
services/orchestrator/src/domain/ports/: job_repository.rs
services/orchestrator/src/infrastructure/: mod.rs  scaling_guard.rs
services/orchestrator/src/infrastructure/auth/: verifier.rs
services/orchestrator/src/infrastructure/clients/: dewatermark.rs  diffusion_engine.rs  extractor.rs  mod.rs  otel_propagation.rs  pptx_builder.rs  texts_translation.rs  video_composer.rs  video_generator.rs  voice_cloner.rs  voice_extractor.rs
services/orchestrator/src/infrastructure/repositories/: compose_scaling_repository.rs  kube_scaling_repository.rs  mod.rs  redis_job_repository.rs  s3_job_repository.rs  s3_storage_repository.rs
services/orchestrator/src/interfaces/http/: health.rs  health_handlers.rs  job_handlers.rs  mod.rs
services/orchestrator/src/interfaces/http/middleware/: auth.rs
services/orchestrator/static/: index.html
(+106 files in other folders)
