[package]
name = "keryx-ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Storage & Cache
aws-config = "1.1"
aws-sdk-s3 = "1.1"
redis = { version = "0.25", features = ["tokio-comp", "json"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
