[package]
name = "keryx-ingestor"
version = "0.5.0"
authors = ["Joseph ZACHARIE <joseph@example.com>"]
edition = "2024"

[lib]
name = "keryx_ingestor"
path = "src/lib.rs"

[[bin]]
name = "keryx-ingestor"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }

# Storage & Cache
aws-config = "1.1"
aws-sdk-s3 = "1.1"
redis = { version = "0.25", features = ["tokio-comp", "json"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Computer Vision — requires libclang (llvm/clang). Uncomment in Docker build env.
# opencv = { version = "0.93", default-features = false, features = ["videoio", "imgproc", "imgcodecs"] }

# Kubernetes control
kube = { version = "0.96", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }

# Docker control (for Compose scaling)
bollard = "0.18"

# Internal workspace crates
keryx-core = { path = "../keryx-core" }
